CbeerDev/objects/AsyncRequest__c.object
<CustomObject>
    <description>Stores asynchronous requests of Authorizations/Features with Store Sets to be processed, or Accounts with Store Set Criteria to be process, or any other new functionality down the road can be leveraged here.</description>
    <fields>
        <fullName>AsyncType__c</fullName>
        <description>Each picklist option drive a different business logic. As more business requirement leverage this Asynchronous framework, more picklist options can be added.</description>
        <label>AsyncType</label>
        <picklist>
            <picklistValues>
                <fullName>Store Set Automation For Item</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>System-generated, or custom-generated error message caught during processing of the request. Helpful to discover issues and resolutions.</description>
        <label>Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Error__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flags that an error occurred while processing this request. Can be unchecked to allow the Request to be processed again.</description>
        <label>Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Params__c</fullName>
        <description>This can be any data, in any format, that you want passed to the Asynchonous job. Most typically it will be a comma-delimited list of record IDs to be processed, such as Account IDs, or Auth/Feature IDs.</description>
        <label>Params</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>AsyncRequest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>AsyncType__c</columns>
        <columns>Error__c</columns>
        <columns>Error_Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Async Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AsyncRequests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>